[gd_scene load_steps=2 format=2]

[ext_resource path="res://atv s9.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 206.0
margin_top = 220.0
margin_right = 333.0
margin_bottom = 261.0
text = "enter"

[node name="Button2" type="Button" parent="."]
margin_left = 206.0
margin_top = 310.0
margin_right = 333.0
margin_bottom = 351.0
text = "enter"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 354.0
margin_top = 215.0
margin_right = 648.0
margin_bottom = 254.0

[node name="Label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 411.0
margin_top = 194.0
margin_right = 598.0
margin_bottom = 210.0
text = "Insira 10 valores aleatorios."
align = 1

[node name="Label3" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 395.0
margin_top = 280.0
margin_right = 600.0
margin_bottom = 296.0
text = "Resultado em ordem crescente!"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 354.0
margin_top = 298.0
margin_right = 650.0
margin_bottom = 352.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Label2" type="Label" parent="ColorRect"]
margin_left = 2.0
margin_top = 8.0
margin_right = 290.0
margin_bottom = 48.0
autowrap = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
